--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/i18n": "^8.3.1",
     "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0",
+    "animate.css": "^4.1.1",
     "nuxt": "3.12.3",
     "vue": "latest",
     "zod": "^3.23.8"
